# studiomcphub

./: .firebaserc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  glama.json  requirements.txt  server.json  smithery.yaml
.well-known/: mcp.json
contracts/: AeternumCollection.sol
contracts/abi/: AeternumCollection.json
docs/: GROK_TEST_PROMPT.md
site/: guide.html  index.html  llms.txt  pricing.json  privacy.html  robots.txt  sitemap.xml  support.html  terms.html
site/.well-known/: agent.json  glama.json  mcp.json
site/templates/: index.html
src/api/: support.py
src/auth/: __init__.py  clients.py  consent.py  oauth.py  pkce.py  tokens.py
src/mcp_server/: admin.py  config.py  mcp_tools.py  server.py
src/payment/: agent_tiers.py  gcx_credits.py  kite_config.py  loyalty.py  stripe_pay.py  x402.py
src/tools/: __init__.py  color_profile.py  dataset.py  enrich.py  gcs_staging.py  generate.py  generate_nano.py  infuse.py  mint.py  (+14 more)
studio/: README.md  SKILL.md  pyproject.toml  studio.example.json
studio/studio/: __init__.py  __main__.py  cli.py  client.py  config.py  dam.py  models.py  pipeline.py  preview.py
studio/studio/connectors/: __init__.py  gooten.py  printful.py  printify.py
studio/studio/stages/: __init__.py  color_profile.py  enrich.py  mockup.py  palette.py  print_ready.py  remove_bg.py  resize.py  upscale.py  vectorize.py  watermark.py
studio/studio/templates/: gallery.html
studio/tests/: conftest.py  test_client.py  test_dam.py  test_pipeline.py
(+6 files in other folders)
