[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studiomcphub-studio"
version = "0.1.0"
description = "Image to Retail in 90 seconds — local creative pipeline powered by StudioMCPHub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Metavolve Labs", email = "curator@golden-codex.com" }]
keywords = ["mcp", "creative-ai", "pod", "print-on-demand", "image-processing", "dam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "httpx>=0.25",
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock"]

[project.scripts]
studio = "studio.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["studio"]

[project.urls]
Homepage = "https://studiomcphub.com"
Repository = "https://github.com/codex-curator/studiomcphub"
Documentation = "https://studiomcphub.com/docs"
